# vision

src/version_pkg/: CMakeLists.txt  package.xml
src/version_pkg/config/: camera_calibration.yaml
src/version_pkg/launch/: launchreally.launch  launchvirtually.launch
src/version_pkg/msg/: Object.msg  Objects.msg  Point3D.msg
src/version_pkg/scripts/: calculate.py  camera_node.py  clip_node.py  inference.py
